# torch_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  benchmark_mcts_nn.sh  build.sh  cmake_install.cmake  pyproject.toml  run.sh  t_build.sh
head/: NN_AI.cpp  NN_AI.h  expmax.h  mcts_NN.hpp
play/: mcts_nn.cpp  play_exp.cpp  play_greedy_nn.cpp
py/: CNN_DEEP.py  convert_to_torchscript.py  play_kaneko.py
