[project]
name = "2048-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "onnx>=1.17.0",
    "pygame>=2.6.1",
    "rich>=13.9.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

